# w3bstream-examples

./: .gitignore  README.md
click2earn/: README.md
click2earn/device/: README.md
click2earn/wasm/: Makefile  click2earn.go  click2earn.wasm  go.sum
device-proof/: README.md
device-proof/device/: .gitignore  platformio.ini
device-proof/smartcontract/: ExampleToken.sol  W3BStream ERC20.json
device-proof/wasm/: Makefile  device-proof-applet.go  device-proof-applet.wasm  go.mod  go.sum
helium/: HeliumW3bstreamExample.ino  README.md
identity-binding/: README.md  package.json
identity-binding/scripts/: config.js  deploy.js
points-nft/: README.md
points-nft/smartcontract/: ExampleERC721.sol  W3BStream NFT.json
points-nft/wasm/: Makefile  go.mod  go.sum  points-nft.go  points-nft.wasm
points-token/: README.md  w3bstream.ini
points-token/smartcontract/: ExampleToken.sol
points-token/wasm/: Makefile  go.mod  go.sum  points-token.go  (+1 more)
simple-smart-grid/: README.md
simple-smart-grid/raspberry_pi/: CMakeLists.txt  README.md  base64.hpp  display.py  install-requirements.sh  install.sh  main.cpp  power-meter-backend.service  power-meter-display.service  rebuild-restart.sh  requirements.txt  uninstall.sh
simple-smart-grid/raspberry_pi/ina219/: Makefile  README.md  profiler.cc
simple-smart-grid/raspberry_pi/ina219/src/: ina219.cc
simple-smart-grid/raspberry_pi/keccak256/: keccak256.cpp  keccak256.hpp
walk2earn/: .gitignore  Makefile  README.md
walk2earn/w3bstream/: Cargo.toml  Makefile
walk2earn/w3bstream/src/: abi.rs  lib.rs  sdk.rs  types.rs
(+45 files in other folders)
